fix splash screen overflowing

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -133,10 +133,12 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow: hidden;
   }
 
   #root {
     height: 100svh;
+    max-height: 100svh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
